2010-06-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14640: Improve cookie detection at login screen (Thanks to Steffen Gebert)
	* Fixed bug #14565: There is no way to disable compress and concatenate
	* Fixed bug #14545: [No Title] shown when editing a record on root level (Thanks to Reinhard Fuehricht)
	* Fixed bug #14681: Use self:: for static method calls with classname:: within the same class in t3lib (Thanks to Sebastian Michaelsen)
	* Fixed bug #14538: Icons missing in page tree for "Page contains" pages (Thanks to Steffen Ritter)

2010-06-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.6 to 1.1.7

2010-06-13  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated copyright comments
	* Cleanup: Set SVN end of line property

2010-06-13  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14624: Use Flash Message in Template module

2010-06-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13895: Bug: getTSConfigVal called with wrong object (Thanks to Andreas Stauder)
	* Fixed bug #14467: Code cleanup: t3lib_iconWorks::getIconImage is not needed anymore (Thanks to Steffen Ritter)
	* Fixed bug #14356: Make disable_controls available for all group fields, not just type "file" (Thanks to Sven Teuber)

2010-06-12  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #8778: Disabled draft workspace: NEWS.txt & forgotten ext_conf_template
	* Follow-up to #14627: SpriteIcons: page-tree, not age-tree
	* Fixed bug #14627: SpriteIcons: Several Icons replaced with non-existent sprite-Icons / not replaced / replaced wrong (Thanks to Steffen Ritter)

2010-06-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14636: Improvements to new Backend skin, replace old styling (Thanks to Steffen Gebert and Lars Zimmermann)
	* Fixed #14679: Deprecating page and branch versioning, these versioning types are now disabled by default, see NEWS.txt for 4.4 for more info